--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-react-modal": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
